--- a/index.html
+++ b/index.html
@@ -384,12 +384,12 @@
 					</div>
 				</div>
 				<!-- Wrapper for slides -->
-				<div class="carousel-inner" style="    margin-right: auto;
+				<div class="carousel-inner-local" style="margin-right: auto;
                 margin-left: auto;
                 width: 80%;">
 					<div class="item " id="box1">
 						<div class="container-fluid">
-							<div class="row" style="    margin-bottom: 5%;">
+							<div class="row" style="margin-bottom: 5%;">
 								<div class="col-sm-6 servicescol" style="height: auto;margin-right: 5%;">
 									<div style="padding:10%;">
 										<h4 style="text-align: center;"><b>MIRO</b></h4>
@@ -440,7 +440,7 @@
 					</div>
 					<div class="item" id="box2">
 						<div class="container-fluid">
-							<div class="row" style="    margin-bottom: 5%;">
+							<div class="row" style="margin-bottom: 5%;">
 								<div class="col-sm-6 servicescol" style="height: auto;margin-right: 5%;">
 									<div style="padding:10%;">
 										<h4 style="text-align: center;"><b>Startuplabs</b></h4>
