--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
 								#box3{
 									display:none;
 								}
+
+								@media screen and (max-width:500px) {
+									#gotopitchlogo{
+										height: 60px !important;
+									}
+								}
 							</style>
 
 							<div class="pagination">
@@ -499,7 +505,7 @@
 										<h4 style="text-align: center;"><b>GoToPitch</b></h4>
 										<div style="margin-left: auto; margin-right: auto;">
 											<img src="https://gotopitch.ai/static/images/logo-img.png"
-												style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block">
+												style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block" id="gotopitchlogo">
 										</div>
 										<br>
 										<p style="font-size: 1em;
