Added AWS in services

--- a/index.html
+++ b/index.html
@@ -519,6 +519,25 @@
 											data-target="#myModal5">Read more</button>
 									</div>
 								</div>
+								<div class="col-sm-6 servicescol" style="height: auto;margin-right: 5%;">
+									<div style="padding:10%;">
+										<h4 style="text-align: center;"><b>Amazon Web Services</b></h4>
+										<div style="margin-left: auto; margin-right: auto;">
+											<img src="https://d1.awsstatic.com/LATAM/Startup%20founders/LP_startups_logo_aws-activate.bde9cc1a112cd98c62c246232cc12e3139307fca.png"
+												style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block" id="gotopitchlogo">
+										</div>
+										<br>
+										<p style="font-size: 1em;
+                                    text-align: justify;">
+											Amazon Web Services provides startups with the low cost, easy to use infrastructure needed to scale and grow. With the AWS Activate program, startups get access to the resources they need to quickly get started on AWS – including credits, training, and support. We currently have a Portfolio package designed for startups in participating accelerators, incubators, seed/VC funds, and other startup enabling organizations. The world’s hottest and most successful startups use AWS – including Airbnb, Lyft, and Slack. Join them – and build your business on AWS today.
+										</p>
+										<button class="btn btn-info" type="button" style="    padding: 3% !important;
+                                            font-size: 1.2em !important;
+                                            margin-left: 36%;
+                                            margin-top: 5%;background-color: #11212d;" data-toggle="modal"
+											data-target="#myModal6">Read more</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -655,6 +674,32 @@
 								<li>Talk to the experts</li>
 								<li>Apply 15 investors every month</li>
 								<li>Reply investor’s messages</li>
+							</ul>
+						</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="modal fade" id="myModal6" role="dialog">
+			<div class="modal-dialog">
+
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Services offered</h4>
+					</div>
+					<div class="modal-body">
+						<p>
+							<ul>
+								<li>Every participants of LSM/E-START/KAN/MAS/EMPRESARIO who participates the event can avail discount of $2000 on Amazon Web Services</li>
+								<li>Top startups of LSM/E-START/EMPRESARIO/MAS/KAN will get 5000$ AWS credits</li>
+								<li>Other startups who attend the event (and not pitched) will be personally mailed by us and offered 1000$ AWS Credits.</li>
+								<li>Startups of IIT KGP can directly contact E-Cell, IIT Kharagpur to avail 1000$ AWS credits</li>
 							</ul>
 						</p>
 					</div>
