resized aws logo in 500px screen size

--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
 									#gotopitchlogo{
 										height: 60px !important;
 									}
+									#awslogo{
+										height: 40px !important;
+									}
 								}
 							</style>
 
@@ -524,7 +527,7 @@
 										<h4 style="text-align: center;"><b>Amazon Web Services</b></h4>
 										<div style="margin-left: auto; margin-right: auto;">
 											<img src="https://d1.awsstatic.com/LATAM/Startup%20founders/LP_startups_logo_aws-activate.bde9cc1a112cd98c62c246232cc12e3139307fca.png"
-												style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block" id="gotopitchlogo">
+												style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block" id="awslogo">
 										</div>
 										<br>
 										<p style="font-size: 1em;
