--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 					<h1 style="font-weight: 600;font-size: 55px;">STARTUP</h1>
 					<h1 style="font-weight: 600;font-size: 55px;">SERVICES</h1>
 					<h1 style="font-weight: 600;font-size: 55px;">PROGRAM</h1>
+					<h4>Backing your growth with the services you need.</h4>
 				</div>
 			</div>
 			<div class="col-sm-6" style="display: flex;
@@ -817,6 +818,11 @@
 			</div>
 		</div>
 	</div>
+	<form  class="pb-4" id = "sheetdb-form" class="col-xs-12 col-sm-12 col-md-12 col-lg-6"  action="https://sheetdb.io/api/v1/b4mfvwj66vo5v" method="POST" style="display:flex; flex-direction:column; height:max-content; align-items:center; justify-content:space-between; margin:0 auto; padding-top: 40px; padding-bottom: 40px;">
+		<label for="email" style="text-align:center; font-size: 30px;color:#686e7f; font-weight:800;padding-top: 20px; padding-bottom: 20px;">Subscribe to E-Cell, IIT Kharagpur</label>
+		<input type="email" placeholder="Your Email Address" name="data[Email]" style="background-color: white; border: 2px solid grey; border-radius: 10px; width: 420px; padding:10px">
+		<button type="submit" style="background-color: transparent; color:red; border: 2px solid red; border-radius: 40px; width: 220px; padding: 15px; margin-top: 40px; margin-bottom: 40px;">Subscribe Now</button>
+   </form>
 	<!--contact-->
 	<div class="container-fluid contactbox">
 		<!-- <img src="ecell_logo_white.png" alt="Entrepreneurship Cell logo"> -->
