--- a/index.html
+++ b/index.html
@@ -249,21 +249,10 @@
             justify-content: center;
             align-items: center;padding:7%;">
 				<p style="text-align: center;
-                font-size: 1.2em;">Startup Services Program is an initiative by E-Cell, IIT Kharagpur. It aims to aid
-					the fledgling start-ups of IIT Kharagpur in terms of providing them certain required business
-					services. Starting-up can be a tricky business. It requires a great deal of effort, will,
-					perseverance on the part of the founders along with plenty of resources.<br>
-
-					Most of the start-ups die out and shut down because of paucity of quality services required at the
-					opportune time. Advice on legal, taxation, financial, technical aspects of running a startup,
-					co-working space, HR needs etc. are just a few things which a startup requires post inception.<br>
-
-					A startup usually faces constant financial crunch in its early stages. To help them in their
-					endeavours, this initiative has been launched wherein these start-ups are provided certain
-					free/discounted services to reduce their financial burden. It is expected that this will encourage
-					more and more students to take up the path of entrepreneurship and IIT Kharagpur will see an
-					unprecedented rise in the number of entrepreneurs being produced in the institute. The benefits
-					under this program are limited only to IIT Kharagpur student and alumni start-ups.</p>
+                font-size: 1.2em;">Startup Services Program is an initiative by E-Cell, IIT Kharagpur. It aims to aid the fledgling start-ups of IIT Kharagpur in terms of providing them certain required business services. 
+A startup usually faces constant financial crunch in its early stages. To help them in their endeavors, this initiative has been launched wherein these start-ups are provided certain free/discounted services to reduce their financial burden. 
+The initiative is aimed at encouraging more and more students to take up the path of entrepreneurship and to see an unprecedented rise in the number of entrepreneurs being produced in IIT Kharagpur. The benefits under this program are limited only to IIT Kharagpur student and alumni start-ups.
+</p>
 			</div>
 		</div>
 	</div>
