--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
             display: flex;
             justify-content: center;
             align-items: center;padding:7%;">
-				<p style="font-size: 1.2em;">Startup Services Program is an initiative by E-Cell, IIT Kharagpur. It aims to aid the fledgling start-ups of IIT Kharagpur in terms of providing them certain required business services. <br>
-A startup usually faces constant financial crunch in its early stages. To help them in their endeavors, this initiative has been launched wherein these start-ups are provided certain free/discounted services to reduce their financial burden. <br>
+				<p style="font-size: 1.2em;">Startup Services Program is an initiative by E-Cell, IIT Kharagpur. It aims to aid the fledgling start-ups of IIT Kharagpur in terms of providing them certain required business services. <br><br>
+A startup usually faces constant financial crunch in its early stages. To help them in their endeavors, this initiative has been launched wherein these start-ups are provided certain free/discounted services to reduce their financial burden. <br><br>
 The initiative is aimed at encouraging more and more students to take up the path of entrepreneurship and to see an unprecedented rise in the number of entrepreneurs being produced in IIT Kharagpur. The benefits under this program are limited only to IIT Kharagpur student and alumni start-ups.
 </p>
 			</div>
