--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 			<div class="col-sm-6" style=" height: 90vh;background-color: #11212d;color: #fdf0ea;display: flex;
             justify-content: center;
             align-items: center;">
-				<div style=" text-align: center>
-					<h1 style="font-weight: 600;font-size: 55px; text-align: center">STARTUP</h1>
+				<div style="text-align: center">
+					<h1 style="font-weight: 600;font-size: 55px;">STARTUP</h1>
 					<h1 style="font-weight: 600;font-size: 55px;">SERVICES</h1>
 					<h1 style="font-weight: 600;font-size: 55px;">PROGRAM</h1>
 					<h4>Backing your growth with the services you need.</h4>
