--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ The initiative is aimed at encouraging more and more students to take up the pat
 		<button type="submit"
 			style="background-color: transparent; color:red; border: 2px solid red; border-radius: 40px; width: 220px; padding: 15px; margin-top: 40px; margin-bottom: 40px;">Subscribe
 			Now</button>
-			<label id="success-confirm">You have successfully subscribed to Entrepreneurship Cell, IIT Kharagpur.</label>
+			<label id="success-confirm">You have successfully subscribed to Newsletter</label>
 	</form>
 	<style>
 		#success-confirm{
