--- a/index.html
+++ b/index.html
@@ -864,14 +864,13 @@ The initiative is aimed at encouraging more and more students to take up the pat
 		action="https://www.ecell-iitkgp.org/subscription_backend.php" method="POST"
 		style="display:flex; flex-direction:column; height:max-content; align-items:center; justify-content:space-between; margin:0 auto; padding-top: 40px; padding-bottom: 40px;">
 		<label for="email"
-			style="text-align:center; font-size: 20px;color:#686e7f; font-weight:800;padding-top: 20px; padding-bottom: 20px;">Subscribe
-			to E-Cell, IIT Kharagpur</label>
+			style="text-align:center; font-size: 20px;color:#686e7f; font-weight:800;padding-top: 20px; padding-bottom: 20px;">Subscribe to Startup Saturdays, our weekly newsletter</label>
 		<input type="email" placeholder="Your Email Address" name="data[Email]"
 			style="background-color: white; border: 2px solid grey; border-radius: 10px; width: 420px; padding:10px">
 		<button type="submit"
 			style="background-color: transparent; color:red; border: 2px solid red; border-radius: 40px; width: 220px; padding: 15px; margin-top: 40px; margin-bottom: 40px;">Subscribe
 			Now</button>
-			<label id="success-confirm">You have successfully subscribed to Newsletter</label>
+			<label id="success-confirm">You have successfully subscribed to our Newsletter</label>
 	</form>
 	<style>
 		#success-confirm{
