--- a/index.html
+++ b/index.html
@@ -637,6 +637,27 @@ The initiative is aimed at encouraging more and more students to take up the pat
 											data-target="#myModal7">Read more</button>
 									</div>
 								</div>
+								<div class="col-sm-6 servicescol" style="height: auto;margin-right: 5%;">
+									<div style="padding:10%;">
+										<h4 style="text-align: center;"><b>Atal Incubation Centres (AICs)</b></h4>
+										<div style="margin-left: auto; margin-right: auto;">
+											<a href="https://aim.gov.in/atal-incubation-centres.php"><img src="https://media-exp1.licdn.com/dms/image/C511BAQGCr1xcoz8gPw/company-background_10000/0/1526455666101?e=2159024400&v=beta&t=O3peCIn9uocxMUK633pOYQvsmk5ABioezJAHN9OrjcQ"
+													style="margin-left: auto; margin-right: auto; width: auto; height: 100px; display: block"
+													id="gotopitchlogo">
+											</a>
+										</div>
+										<br>
+										<p style="font-size: 1em;
+                                    text-align: justify;">
+											Under the Atal Innovation Mission, Atal Incubation Centres (AICs) is a government initiative built with the aim of establishing institutions that would nurture innovative start-ups in their pursuit to become scalable and sustainable business enterprises.
+										</p>
+										<button class="btn btn-info" type="button" style="    padding: 3% !important;
+                                            font-size: 1.2em !important;
+                                            margin-left: 36%;
+                                            margin-top: 5%;background-color: #11212d;" data-toggle="modal"
+											data-target="#myModal8">Read more</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -829,6 +850,29 @@ The initiative is aimed at encouraging more and more students to take up the pat
 							<li>Brand Manual, Positioning & Personality</li>
 							<li>Consumer-relevant website and brochure</li>
 							<li>Explainer Video/ Brand Film Short films</li>
+						</ul>
+						</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="modal fade" id="myModal8" role="dialog">
+			<div class="modal-dialog">
+
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Services offered</h4>
+					</div>
+					<div class="modal-body">
+						<p>
+						<ul>
+							<li>Incubation of 10 startups(more if required) referred by Ecell IIT Kharagpur. </li>
 						</ul>
 						</p>
 					</div>
